<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nmi_active_users"
            android:icon="@drawable/l1students"
            android:title="@string/active_users" />
        <item
            android:id="@+id/mi_exam_result"
            android:icon="@drawable/l1examresult"
            android:title="@string/show_exam_result" />
        <item
            android:id="@+id/mi_img_viewer"
            android:icon="@drawable/img_viewer"
            android:title="@string/img_viewer" />

    </group>

    <item android:title="Settings">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/l1exit"
                android:title="@string/exit_app" />
        </menu>
    </item>

</menu>